--- a/src/config/config-sample.yaml
+++ b/src/config/config-sample.yaml
@@ -1,31 +1,31 @@
 data:
   path: "data"
   competition: "rsna-2024-lumbar-spine-degenerative-classification"
-  # testpath: '/dummy/path/to/test'
-  batch_size: 4
+  batch_size: 8
   num_workers: 4
   valid_ratio: 0.2
   view_type: Sagittal T2/STIR
   train_path: train_images
   test_path: test_images
+  used_portion: 1 #1 to use the whole dataset, 0.1 to use 10%
 
 optim:
   algo: SGD
   params:
-    lr: 0.01
+    lr: 0.0001
 
 nepochs: 20
 loss: "CrossEntropyLoss"
 
 logging:
-  # wandb:
-  #   project: sample_project
-  #   entity: sample_entity
+  wandb:
+    project: lumbar-spine
+    entity: kaggle_coscoy
   log_file: "logs/app.log"
-  log_level: DEBUG
+  log_level: INFO
   logdir: logs
 # model:
 #   class: Linear
 model:
   class: VanillaCNN
-  num_layers: 4
+  num_layers: 3
